# PyPluginManager

./: README.md  pyproject.toml  setup.py
pmlion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pypluginmanager/: __init__.py
pypluginmanager/exceptions/: __init__.py  errors.py
pypluginmanager/installerp/: __init__.py  satdep.py
pypluginmanager/interface/: __init__.py  checker.py  inter_core.py  interfaces.py  types.py
pypluginmanager/interface/plugin/: plugin_config.json
pypluginmanager/rollbacksys/: __init__.py  container.py
pypluginmanager/samplefiles/: __init__.py  interface.py  plugin_config.json
pypluginmanager/samplefiles/Sample-Repo/Config/: config.json
rollbacksys/: __init__.py  container.py  maintainer.py
samplefiles/: __init__.py
samplefiles/Sample-Repo/Config/: plugins.db
