[project]
name =  "pmlion"
version = "0.1"

authors = [
    {name = "Amirreza Zahraei", email = "amir.reza.zahraei@gmail.com"},
]
description = 'A cross platform tool for managing the plugins of applications.'
readme = "README.md"

classifiers = [
        'Development Status :: 4 - Beta',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Information Technology',
        'Natural Language :: English',
        'Topic :: Software Development :: Build Tools',
        'License :: OSI Approved :: MIT License',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.4',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.7',
]

requires-python = ">=3.0.0"


dependencies = [
    'Vmanager'
]











